--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,15 @@
-absl-py==0.15.0
-astunparse==1.6.3
-cached-property==1.5.2
-cachetools==4.2.4
-certifi==2021.5.30
-charset-normalizer==2.0.12
-clang==5.0
-#dataclasses==0.8
-flatbuffers==1.12
-gast==0.4.0
+Flask~=2.1.2
 gensim==3.8.3
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.46.1
-h5py==3.1.0
-idna==3.3
-importlib-metadata==4.8.3
 keras==2.8.0
 Keras-Preprocessing==1.1.2
-Markdown==3.3.7
-gensim==3.8.3
-numpy==1.22.3
-oauthlib==3.2.0
-opt-einsum==3.3.0
-pandas~=1.4.2
-protobuf==3.19.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+matplotlib~=3.5.2
+numpy==1.21.6
+pandas==1.3.5
 python-dateutil==2.8.2
-pytz==2022.1
-requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
-six==1.15.0
-tensorboard==2.6.0
+soynlp~=0.0.493
+tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.6.2
-tensorflow-estimator==2.6.0
-termcolor==1.1.0
-typing-extensions==3.7.4.3
+tensorflow==2.8.0
+tensorflow-estimator==2.8.0
 urllib3==1.26.9
-Werkzeug==2.0.3
-wrapt==1.12.1
-zipp==3.6.0
-Flask~=2.1.2
-matplotlib~=3.5.2
-soynlp~=0.0.493
